整体使用ios样式，增加用户修改信息逻辑，修改联系我们页文本，增加数据源json

--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -18,7 +18,7 @@
           <h2>流年不追忆</h2>
         </ion-label>
         <ion-label style="position: absolute; top: 0; right: 0;">
-          <ion-icon name="thumbs-up"></ion-icon>
+          <ion-icon name="thumbs-up-outline"></ion-icon>
           123
         </ion-label>
       </ion-item>
@@ -35,7 +35,7 @@
           <h2>流年不追忆</h2>
         </ion-label>
         <ion-label style="position: absolute; top: 0; right: 0;">
-          <ion-icon name="thumbs-up"></ion-icon>
+          <ion-icon name="thumbs-up-outline"></ion-icon>
           12345
         </ion-label>
       </ion-item>
@@ -52,7 +52,7 @@
           <h2>流年不追忆</h2>
         </ion-label>
         <ion-label style="position: absolute; top: 0; right: 0;">
-          <ion-icon name="thumbs-up"></ion-icon>
+          <ion-icon name="thumbs-up-outline"></ion-icon>
           123567
         </ion-label>
       </ion-item>
