--- a/src/app/subPages/user-info/user-info.page.html
+++ b/src/app/subPages/user-info/user-info.page.html
@@ -9,61 +9,61 @@
 
 <ion-content>
   <ion-list>
-    <ion-card>
+    <ion-card button (click)="changeNickName()">
       <ion-item lines="none">
-        <ion-label>昵称：流年不追忆</ion-label>
-        <ion-button fill="outline" slot="end">修改</ion-button>
+        <ion-label>昵称 <ion-text color="danger">*</ion-text></ion-label>
+        <ion-text slot="end">{{nickName}}</ion-text>
+      </ion-item>
+    </ion-card>
+    <ion-card button (click)="changeName()">
+      <ion-item lines="none">
+        <ion-label>姓名 <ion-text color="danger">*</ion-text></ion-label>
+        <ion-text slot="end">{{name}}</ion-text>
+      </ion-item>
+    </ion-card>
+    <ion-card button (click)="changeQQ()">
+      <ion-item lines="none">
+        <ion-label>QQ <ion-text color="danger">*</ion-text></ion-label>
+        <ion-text slot="end">{{qqNumber}}</ion-text>
+      </ion-item>
+    </ion-card>
+    <ion-card button (click)="changeWeChat()">
+      <ion-item lines="none">
+        <ion-label>微信 <ion-text color="danger">*</ion-text></ion-label>
+        <ion-text slot="end">{{weChatNumber}}</ion-text>
+      </ion-item>
+    </ion-card>
+    <ion-card button (click)="changePhone()">
+      <ion-item lines="none">
+        <ion-label>手机号 <ion-text color="danger">*</ion-text></ion-label>
+        <ion-text slot="end">{{phone}}</ion-text>
       </ion-item>
     </ion-card>
     <ion-card>
       <ion-item lines="none">
-        <ion-label>姓名：孙永威</ion-label>
-        <ion-button fill="outline" slot="end">修改</ion-button>
+        <ion-label>出生日期 <ion-text color="danger">*</ion-text></ion-label>
+        <ion-text slot="end">{{birthday}}</ion-text>
+        <ion-datetime [pickerOptions]="dateOptions" pickerFormat="YYYY-MM-DD" mode="md">
+        </ion-datetime>
       </ion-item>
     </ion-card>
     <ion-card>
       <ion-item lines="none">
-        <ion-label>手机：15515182060</ion-label>
-        <ion-button fill="outline" slot="end">修改</ion-button>
-      </ion-item>
-    </ion-card>
-    <ion-card>
-      <ion-item lines="none">
-        <ion-label>出生日期：2020-2-21</ion-label>
-        <ion-button fill="outline" slot="end">修改</ion-button>
-      </ion-item>
-    </ion-card>
-    <ion-card>
-      <ion-item lines="none">
-        <ion-label>我的特长</ion-label>
-        <ion-button fill="outline" slot="end">修改</ion-button>
+        <ion-label>个性标签 <ion-text color="danger">*</ion-text></ion-label>
+        <ion-button fill="outline" slot="end" (click)="changeLabel()">修改</ion-button>
       </ion-item>
       <ion-card-content>
-        <ion-chip>
-          <ion-label color="primary">篮球</ion-label>
-        </ion-chip>
-        <ion-chip>
-          <ion-label color="secondary">足球</ion-label>
-        </ion-chip>
-        <ion-chip>
-          <ion-label color="tertiary">羽毛球</ion-label>
-        </ion-chip>
-        <ion-chip>
-          <ion-label color="warning">游泳</ion-label>
-        </ion-chip>
-        <ion-chip>
-          <ion-label color="light">乒乓球</ion-label>
+        <ion-chip *ngFor="let item of label">
+          <ion-label [color]="item.color">{{item.tag}}</ion-label>
         </ion-chip>
       </ion-card-content>
     </ion-card>
     <ion-card>
       <ion-item lines="none">
-        <ion-label>个性签名</ion-label>
-        <ion-button fill="outline" slot="end">修改</ion-button>
+        <ion-label>个性签名 <ion-text color="danger">*</ion-text></ion-label>
+        <ion-button fill="outline" slot="end" (click)="changeSignature()">修改</ion-button>
       </ion-item>
-      <ion-card-content>
-        这是我的个性签名这是我的个性签名这是我的个性签名这是我的个性签名
-      </ion-card-content>
+      <ion-card-content>{{signature}}</ion-card-content>
     </ion-card>
   </ion-list>
 </ion-content>
