增加退出登录功能，完善json源文件，改动部分样式等

--- a/src/app/index/index.page.scss
+++ b/src/app/index/index.page.scss
@@ -6,3 +6,10 @@ ion-content ion-toolbar {
     width: 100% !important;
     height: 25vh;
 }
+
+ion-card-content {
+    height: 5vh;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
