--- a/src/app/mine/mine.page.html
+++ b/src/app/mine/mine.page.html
@@ -58,4 +58,11 @@
       <ion-text fill="outline" slot="start">联系我们</ion-text>
     </ion-item>
   </ion-card>
+  <!-- 退出登录 -->
+  <ion-card>
+    <ion-item lines="none" button (click)="userExit()">
+      <ion-icon slot="start" name="power-outline"></ion-icon>
+      <ion-text fill="outline" slot="start">退出登录</ion-text>
+    </ion-item>
+  </ion-card>
 </ion-content>
