--- a/src/app/subPages/class-sub-news/class-sub-news.page.scss
+++ b/src/app/subPages/class-sub-news/class-sub-news.page.scss
@@ -6,3 +6,10 @@ ion-content ion-toolbar {
     width: 100% !important;
     height: 25vh;
 }
+
+ion-card-content {
+    height: 5vh;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
