--- a/src/app/mine/mine.page.html
+++ b/src/app/mine/mine.page.html
@@ -1,8 +1,4 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title style="text-align: center;">我的</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header [title]="title"></app-header>
 
 <ion-content>
   <!-- 个人信息卡片 -->
