--- a/src/app/subPages/message/message.page.html
+++ b/src/app/subPages/message/message.page.html
@@ -8,25 +8,14 @@
 </ion-header>
 
 <ion-content>
-  <div class="messageBox">
-    <p class="messageTime">2020-2-22 15:01</p>
+  <div class="messageBox" *ngFor="let item of messageData">
+    <p class="messageTime">{{item.time}}</p>
     <ion-card style="margin-top: 10px;">
       <ion-card-header style="margin: -3vh 0;">
         <h4 style="color: #000;">温馨提示</h4>
       </ion-card-header>
       <ion-card-content>
-        Keep close to Nature's heart... and break clear away, once in awhile.
-      </ion-card-content>
-    </ion-card>
-  </div>
-  <div class="messageBox">
-    <p class="messageTime">2020-2-22 15:01</p>
-    <ion-card style="margin-top: 10px;">
-      <ion-card-header style="margin: -3vh 0;">
-        <h4 style="color: #000;">温馨提示</h4>
-      </ion-card-header>
-      <ion-card-content>
-        Keep close to Nature's heart... and break clear away, once in awhile.
+        {{item.text}}
       </ion-card-content>
     </ion-card>
   </div>
