--- a/src/app/index/index.page.html
+++ b/src/app/index/index.page.html
@@ -1,20 +1,19 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title style="text-align: center;">热点新闻</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header [title]="title"></app-header>
 
 <ion-content>
-  <ion-card (click)="toNewsDetail()">
-    <div class="newsImgBox">
-      <img src="../../../assets/newsImg/yangshi.jpg" />
-    </div>
-    <ion-card-header>
-      <ion-card-subtitle>新华社：2020-2-20</ion-card-subtitle>
-      <ion-card-title>叙利亚局势在线</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      叙利亚政府军于抵抗派发生激烈的交火冲突。
-    </ion-card-content>
-  </ion-card>
+  <div *ngFor="let item of newsData">
+    <ion-card (click)="toNewsDetail(item.id)">
+      <div class="newsImgBox">
+        <img [src]="item.images" />
+      </div>
+      <ion-card-header>
+        <ion-card-subtitle>{{item.source}}：{{item.date}}</ion-card-subtitle>
+        <ion-card-title>
+          <h4 style="font-weight: bold;margin-bottom: 0;">{{item.title}}</h4>
+        </ion-card-title>
+      </ion-card-header>
+      <ion-card-content>{{item.intro}}</ion-card-content>
+    </ion-card>
+  </div>
+
 </ion-content>
