--- a/src/app/subPages/class-sub-news/class-sub-news.page.html
+++ b/src/app/subPages/class-sub-news/class-sub-news.page.html
@@ -15,7 +15,9 @@
       </div>
       <ion-card-header>
         <ion-card-subtitle>{{item.source}}：{{item.date}}</ion-card-subtitle>
-        <ion-card-title>{{item.title}}</ion-card-title>
+        <ion-card-title>
+          <h4 style="font-weight: bold;margin-bottom: 0;">{{item.title}}</h4>
+        </ion-card-title>
       </ion-card-header>
       <ion-card-content>
         {{item.intro}}
