调整chart页面HTML结构，增加假数据，新闻根据日期排序，修改日期比较算法。

--- a/src/app/index/index.page.html
+++ b/src/app/index/index.page.html
@@ -3,7 +3,7 @@
 <ion-content>
   <div *ngFor="let item of newsData">
     <ion-card (click)="toNewsDetail(item.id)">
-      <div class="newsImgBox">
+      <div class="newsImgBox" *ngIf="item.images">
         <img [src]="item.images" />
       </div>
       <ion-card-header>
