--- a/src/app/chart/chart.page.html
+++ b/src/app/chart/chart.page.html
@@ -1,30 +1,28 @@
 <app-header [title]="title"></app-header>
 
 <ion-content>
-  <ion-app>
-    <!-- 新闻图表chip -->
-    <ion-item lines="full">
-      <ion-chip color="primary">
-        <ion-icon name="bar-chart-outline"></ion-icon>
-        <ion-label>柱状图</ion-label>
-      </ion-chip>
-      <ion-chip color="primary">
-        <ion-icon name="pie-chart-outline"></ion-icon>
-        <ion-label>饼图</ion-label>
-      </ion-chip>
-    </ion-item>
-    <!-- 新闻统计主体部分 -->
-    <ion-card *ngIf="isBar">
-      <ion-card-content>
-        <div echarts [options]="barOption"></div>
-      </ion-card-content>
-    </ion-card>
-    <ion-card *ngIf="!isBar">
-      <ion-card-content>
-        <div echarts [options]="pieOption"></div>
-      </ion-card-content>
-    </ion-card>
-  </ion-app>
+  <!-- 新闻图表chip -->
+  <div class="chipBox">
+    <ion-chip color="primary">
+      <ion-icon name="bar-chart-outline"></ion-icon>
+      <ion-label>柱状图</ion-label>
+    </ion-chip>
+    <ion-chip color="primary">
+      <ion-icon name="pie-chart-outline"></ion-icon>
+      <ion-label>饼图</ion-label>
+    </ion-chip>
+  </div>
+  <!-- 新闻统计主体部分 -->
+  <ion-card *ngIf="isBar">
+    <ion-card-content>
+      <div echarts [options]="barOption"></div>
+    </ion-card-content>
+  </ion-card>
+  <ion-card *ngIf="!isBar">
+    <ion-card-content>
+      <div echarts [options]="pieOption"></div>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
 
 <ion-footer>
