增加统计折线图

--- a/src/app/chart/chart.page.html
+++ b/src/app/chart/chart.page.html
@@ -28,7 +28,7 @@
 <ion-footer>
   <ion-toolbar>
     <ion-button fill="outline" shape="round" (click)="todayNews()">
-      今日新闻统计
+      各类新闻统计
     </ion-button>
     <ion-button fill="outline" shape="round" slot="end" (click)="newsClass()">
       各类新闻占比
