--- a/src/app/subPages/contact/contact.page.html
+++ b/src/app/subPages/contact/contact.page.html
@@ -1,11 +1,4 @@
-<ion-header [translucent]="true">
-  <ion-toolbar style="text-align: center;">
-    <ion-buttons slot="start" style="position: absolute;">
-      <ion-back-button text="" icon="chevron-back-outline" color="primary"></ion-back-button>
-    </ion-buttons>
-    <ion-title>联系我们</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header [title]="title" [backButton]="backButton"></app-header>
 
 <ion-content>
   <ion-app>
