--- a/src/app/subPages/contact/contact.page.html
+++ b/src/app/subPages/contact/contact.page.html
@@ -2,9 +2,9 @@
 
 <ion-content>
   <ion-app>
-    <ion-text class="title">
-      <h3>爱看新闻</h3>
-    </ion-text>
+    <div class="title">
+      <ion-img src="../../../assets/images/logo.png"></ion-img>
+    </div>
     <ion-content class="content">
       <p>爱看新闻以“新闻飞入千万家”为理念，坚持用户至上为原则。<strong>爱看新闻再次特别强调：本新闻未开放任何充值窗口，如有任何提示充值信息，请勿相信，最终解释权归爱看新闻团队所有！</strong>如果您有任何的疑问或建议，欢迎点击下方的联系按钮致电爱看新闻客服！</p>
       <a href="tel:15515182060" class="number">
