--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -9,21 +9,21 @@
     </ion-button>
   </div>
   <ion-list>
-    <ion-card style="width: 93vw; margin-left: 0;" *ngFor="let item of comment">
+    <ion-card style="width: 93vw; margin-left: 0;" *ngFor="let item of comment;let i = index">
       <ion-item>
         <ion-avatar>
-          <img [src]="item.headPhoto">
+          <img [src]="item.userPhoto">
         </ion-avatar>
         <ion-label style="margin-left: 5px;">
           <h2>{{item.nickName}}</h2>
         </ion-label>
-        <ion-label style="position: absolute; top: 0; right: 0;" (click)="likeEvent()">
-          <ion-icon name="thumbs-up-outline" #likeIcon></ion-icon>
-          <ion-text #likeNum>{{item.like}}</ion-text>
+        <ion-label style="position: absolute; top: 0; right: 0;" (click)="likeEvent(i,item.id)">
+          <ion-icon name="thumbs-up-outline" class="likeIcon"></ion-icon>
+          <ion-text class="likeNum">{{item.commentLikeNum}}</ion-text>
         </ion-label>
       </ion-item>
       <ion-card-content style="padding-top: 5px; padding-bottom: 5px;">
-        <p>{{item.content}}</p>
+        <p>{{item.commentContent}}</p>
       </ion-card-content>
     </ion-card>
   </ion-list>
