--- a/src/app/index/index.page.html
+++ b/src/app/index/index.page.html
@@ -2,17 +2,17 @@
 
 <ion-content>
   <div *ngFor="let item of newsData">
-    <ion-card (click)="toNewsDetail(item.id)">
-      <div class="newsImgBox" *ngIf="item.images">
-        <img [src]="item.images" />
+    <ion-card (click)="toNewsDetail(item.newsId)">
+      <div class="newsImgBox" *ngIf="item.newsThumbnail">
+        <img [src]="item.newsThumbnail" />
       </div>
       <ion-card-header>
-        <ion-card-subtitle>{{item.source}}：{{item.date}}</ion-card-subtitle>
+        <ion-card-subtitle>{{item.newsSource}}：{{item.newsTime}}</ion-card-subtitle>
         <ion-card-title>
-          <h4 style="font-weight: bold;margin-bottom: 0;">{{item.title}}</h4>
+          <h4 style="font-weight: bold;margin-bottom: 0;">{{item.newsTile}}</h4>
         </ion-card-title>
       </ion-card-header>
-      <ion-card-content>{{item.intro}}</ion-card-content>
+      <ion-card-content>{{item.newsSummary}}</ion-card-content>
     </ion-card>
   </div>
 
