--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -35,26 +35,28 @@
     </div>
     <!-- 注册表单 -->
     <div class="form">
-      <!-- 手机号 -->
-      <ion-item lines="inset">
-        <ion-label position="floating" color="dark">请输入您的手机号</ion-label>
-        <ion-input required type="text" [(ngModel)]="registerAccount"></ion-input>
-      </ion-item>
-      <!-- 密码 -->
-      <ion-item lines="inset">
-        <ion-label position="floating" color="dark">请输入您的密码[6-12位]</ion-label>
-        <ion-input required type="password" [(ngModel)]="registerPwd"></ion-input>
-      </ion-item>
-      <!-- 确认密码 -->
-      <ion-item lines="inset">
-        <ion-label position="floating" color="dark">请再次确认密码</ion-label>
-        <ion-input required type="password" [(ngModel)]="registerPwdAgain"></ion-input>
-      </ion-item>
-      <ion-item lines="none" style="margin-top: 10px;">
-        <ion-checkbox color="primary" checked slot="start" (ionChange)="agreement()"></ion-checkbox>
-        <span class="agreement">我已阅读并同意<a href="javascript:void(0)">爱看新闻团队用户协议</a>和<a
-            href="javascript:void(0)">爱看新闻团队APP公约</a></span>
-      </ion-item>
+      <ion-list>
+        <!-- 手机号 -->
+        <ion-item lines="inset">
+          <ion-label position="floating" color="dark">请输入您的手机号</ion-label>
+          <ion-input required type="text" [(ngModel)]="registerAccount"></ion-input>
+        </ion-item>
+        <!-- 密码 -->
+        <ion-item lines="inset">
+          <ion-label position="floating" color="dark">请输入您的密码[6-12位]</ion-label>
+          <ion-input required type="password" [(ngModel)]="registerPwd"></ion-input>
+        </ion-item>
+        <!-- 确认密码 -->
+        <ion-item lines="inset">
+          <ion-label position="floating" color="dark">请再次确认密码</ion-label>
+          <ion-input required type="password" [(ngModel)]="registerPwdAgain"></ion-input>
+        </ion-item>
+        <ion-item lines="none" style="margin-top: 10px;">
+          <ion-checkbox color="primary" checked slot="start" (ionChange)="agreement()"></ion-checkbox>
+          <span class="agreement">我已阅读并同意<a href="javascript:void(0)">爱看新闻团队用户协议</a>和<a
+              href="javascript:void(0)">爱看新闻团队APP公约</a></span>
+        </ion-item>
+      </ion-list>
     </div>
     <!-- 注册按钮 -->
     <div class="loginBtn">
